--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
   <require from="./app.css"></require>
   <require from="gridstack/gridstack.min.css"></require>
   <h1>${message}</h1>
-  <h3>Fixed grid</h3>
+  <h3>Static grid</h3>
   <div class="grid-stack" data-gs-width="12" data-gs-animate="yes">
     <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="4" data-gs-height="2">
       <div class="grid-stack-item-content">1</div>
